--- a/index.html
+++ b/index.html
@@ -14,6 +14,19 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;700&display=swap" rel="stylesheet">
+
+<!-- .................... -->
+<script>
+  tailwind.config = {
+    theme: {
+      extend: {
+        colors: {
+          'backgroung-banner': 'rgba(231, 111, 81, 0.10)',
+        }
+      }
+    }
+  }
+</script>
     <style>
       .font{
         font-family: 'Poppins', sans-serif;
@@ -23,21 +36,95 @@
   <body class="font">
     <!-- header section -->
     <header class="max-w-screen-xl mx-auto">
-      <div class="navbar bg-base-100">
-        <div class="flex-1">
-          <a class="text-4xl text-[#000] font font-bold">Bikerz Zone</a>
+      <nav>
+        <div class="navbar bg-base-100 flex-col lg:flex-row">
+          <div class="flex-1">
+            <a class="text-4xl text-[#000] font font-bold">Bikerz Zone</a>
+          </div>
+          <div class="flex-none">
+            <ul class="menu menu-horizontal items-center px-1">
+                <li><a class="text-base text-[#000] font-medium" href="">Home</a></li>
+                <li><a class="text-base text-[#000] font-medium" href="">Shop</a></li>
+                <li><a class="text-base text-[#000] font-medium" href="">News</a></li>
+                <li><a class="text-base text-[#000] font-medium" href="">Contact</a></li>
+                <li><a href=""><button class="btn error bg-[coral] text-white font-bold">Log In</button></a></li>
+              </li>
+            </ul>
+          </div>
         </div>
-        <div class="flex-none">
-          <ul class="menu menu-horizontal items-center px-1">
-              <li><a class="text-base text-[#000] font-medium" href="">Home</a></li>
-              <li><a class="text-base text-[#000] font-medium" href="">Shop</a></li>
-              <li><a class="text-base text-[#000] font-medium" href="">News</a></li>
-              <li><a class="text-base text-[#000] font-medium" href="">Contact</a></li>
-              <li><a href=""><button class="btn active bg-[#E76F51] text-white font-bold text-lg">Log In</button></a></li>
-            </li>
-          </ul>
+      </nav>
+      <section>
+        <div class="carousel w-full h-[550px] bg-backgroung-banner">
+          <div id="slide1" class="carousel-item relative w-full">
+           <div class="flex lg:flex-row flex-col justify-center items-center p-20">
+            <div class="flex-1 space-y-5">
+              <h2 class="lg:text-6xl font-bold text-3xl mt-24 text-[#000] leading-snug">Ride-on R15 V4 <br> with Smile</h2>
+              <p>Amet minim mollit non deserunt ullamco 
+                est sit aliqua dolor do amet sint. Velit officia consequat duis enim velit mollit.</p>
+                <button class="btn btn-active btn-secondary">Purchase</button>
+            </div>
+            <div class="flex-1">
+              <img src="./images/slider/bike2.png" alt="">
+            </div>
+           </div>
+            <div class="absolute flex justify-between transform -translate-y-1/2 left-5 right-5 top-1/2">
+              <a href="#slide4" class="btn btn-circle">❮</a> 
+              <a href="#slide2" class="btn btn-circle">❯</a>
+            </div>
+          </div> 
+          <div id="slide2" class="carousel-item relative w-full">
+            <div class="flex lg:flex-row flex-col justify-center items-center p-20">
+              <div class="flex-1 space-y-5">
+                <h2 class="lg:text-6xl font-bold text-3xl mt-24 text-[#000] leading-snug">Ride-on R15 V4 <br> with Smile</h2>
+                <p>Amet minim mollit non deserunt ullamco 
+                  est sit aliqua dolor do amet sint. Velit officia consequat duis enim velit mollit.</p>
+                  <button class="btn btn-active btn-secondary">Purchase</button>
+              </div>
+              <div class="flex-1">
+                <img src="./images/slider/bike1.png" alt="">
+              </div>
+             </div>
+            <div class="absolute flex justify-between transform -translate-y-1/2 left-5 right-5 top-1/2">
+              <a href="#slide1" class="btn btn-circle">❮</a> 
+              <a href="#slide3" class="btn btn-circle">❯</a>
+            </div>
+          </div> 
+          <div id="slide3" class="carousel-item relative w-full">
+            <div class="flex lg:flex-row flex-col justify-center items-center p-20">
+              <div class="flex-1 space-y-5">
+                <h2 class="lg:text-6xl font-bold text-3xl mt-24 text-[#000] leading-snug">Ride-on R15 V4 <br> with Smile</h2>
+                <p>Amet minim mollit non deserunt ullamco 
+                  est sit aliqua dolor do amet sint. Velit officia consequat duis enim velit mollit.</p>
+                  <button class="btn btn-active btn-secondary">Purchase</button>
+              </div>
+              <div class="flex-1">
+                <img src="./images/slider/bike3.png" alt="">
+              </div>
+             </div>
+            <div class="absolute flex justify-between transform -translate-y-1/2 left-5 right-5 top-1/2">
+              <a href="#slide2" class="btn btn-circle">❮</a> 
+              <a href="#slide4" class="btn btn-circle">❯</a>
+            </div>
+          </div> 
+          <div id="slide4" class="carousel-item relative w-full">
+            <div class="flex lg:flex-row flex-col justify-center items-center p-20">
+              <div class="flex-1 space-y-5">
+                <h2 class="lg:text-6xl font-bold text-3xl mt-24 text-[#000] leading-snug">Ride-on R15 V4 <br> with Smile</h2>
+                <p>Amet minim mollit non deserunt ullamco 
+                  est sit aliqua dolor do amet sint. Velit officia consequat duis enim velit mollit.</p>
+                  <button class="btn btn-active btn-secondary">Purchase</button>
+              </div>
+              <div class="flex-1">
+                <img src="./images/slider/bike4.png" alt="">
+              </div>
+             </div>
+            <div class="absolute flex justify-between transform -translate-y-1/2 left-5 right-5 top-1/2">
+              <a href="#slide3" class="btn btn-circle">❮</a> 
+              <a href="#slide1" class="btn btn-circle">❯</a>
+            </div>
+          </div>
         </div>
-      </div>
+      </section>
     </header>
     <main></main>
     <footer></footer>
