--- a/index.html
+++ b/index.html
@@ -126,7 +126,54 @@
         </div>
       </section>
     </header>
-    <main></main>
+    <main>
+      <!-- Fetured Bikes In This Year -->
+      <section class="my-12 max-w-screen-xl mx-auto">
+        <h1 class="text-center text-5xl font-semibold">Fetured Bikes In This Year</h1>
+        <p class="text-center text-base text-[coral]">Best bike collection</p>
+        <div class="grid lg:grid-cols-3 grid-cols-1 gap-3 items-center justify-center">
+          <div>
+            <div class="card w-96 bg-base-100 shadow-xl">
+              <figure class="px-10 pt-10">
+                <img src="./images/others/latest1.png" alt="">
+              </figure>
+              <div class="card-body">
+                <h2 class="card-title">Ducati XDIAVEL S-73</h2>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Lacus, fermentum amet faucibus sed id nisi lectus at.</p>
+                <div class="card-actions">
+                  <button class="btn text-white bg-[coral]">Read More</button>
+                </div>
+              </div>
+            </div>
+            </div>
+           
+          <div><div class="card bg-base-100 shadow-xl">
+            <figure class="px-10 pt-10">
+              <img src="./images/others/latest2.png" alt="">
+            </figure>
+            <div class="card-body">
+              <h2 class="card-title">Motorcycles & Scooters</h2>
+              <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Lacus, fermentum amet faucibus sed id nisi lectus at.</p>
+              <div class="card-actions">
+                <button class="btn text-white bg-[coral]">Read More</button>
+              </div>
+            </div>
+          </div></div>
+          <div><div class="card bg-base-100 shadow-xl">
+            <figure class="px-10 pt-10">
+              <img src="./images/others/latest3.png" alt="">
+            </figure>
+            <div class="card-body">
+              <h2 class="card-title">2021 Honda CBR500R</h2>
+              <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Lacus, fermentum amet faucibus sed id nisi lectus at.</p>
+              <div class="card-actions">
+                <button class="btn text-white bg-[coral]">Read More</button>
+              </div>
+            </div>
+          </div></div>
+        </div>
+      </section>
+    </main>
     <footer></footer>
   </body>
 </html>
