README.md file added

--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
         <p class="text-center text-base text-[coral]">Best bike collection</p>
         <div class="grid lg:grid-cols-3 grid-cols-1 gap-3 items-center justify-center">
           <div>
-            <div class="card w-96 bg-base-100 shadow-xl">
+            <div class="card bg-base-100 shadow-xl">
               <figure class="px-10 pt-10">
                 <img src="./images/others/latest1.png" alt="">
               </figure>
@@ -147,7 +147,8 @@
             </div>
             </div>
            
-          <div><div class="card bg-base-100 shadow-xl">
+          <div>
+            <div class="card bg-base-100 shadow-xl">
             <figure class="px-10 pt-10">
               <img src="./images/others/latest2.png" alt="">
             </figure>
@@ -158,8 +159,10 @@
                 <button class="btn text-white bg-[coral]">Read More</button>
               </div>
             </div>
-          </div></div>
-          <div><div class="card bg-base-100 shadow-xl">
+          </div>
+        </div>
+          <div>
+            <div class="card bg-base-100 shadow-xl">
             <figure class="px-10 pt-10">
               <img src="./images/others/latest3.png" alt="">
             </figure>
@@ -170,7 +173,8 @@
                 <button class="btn text-white bg-[coral]">Read More</button>
               </div>
             </div>
-          </div></div>
+          </div>
+        </div>
         </div>
       </section>
     </main>
