FAQ section added

--- a/index.html
+++ b/index.html
@@ -245,6 +245,62 @@
           </div>
         </div>
       </section>
+      <!-- ..........FAQ section............ -->
+      <section class="my-24 max-w-screen-xl mx-auto">
+        <h1 class="text-center text-5xl font-bold">Frequently Asked <span class="text-[coral]">Questions</span></h1>
+        <div class="flex lg:flex-row flex-col mt-24 items-center justify-center gap-4">
+          <div class="flex-1 w-full"><img src="./images/others/faq.png" alt=""></div>
+          <div class="flex-1">
+            <div class="collapse collapse-arrow bg-base-200 mt-3">
+              <input type="radio" name="my-accordion-2" checked="checked" /> 
+              <div class="collapse-title text-xl font-medium">
+               <p>What are the most important things I should
+                know about riding a bike?</p>
+              </div>
+              <div class="collapse-content"> 
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Itaque dolor magni eius nam odit, repellat, ex odio adipisci deleniti qui delectus quasi maiores doloribus optio ipsa distinctio eum aliquid fuga!</p>
+              </div>
+            </div>
+            <div class="collapse collapse-arrow bg-base-200 mt-3">
+              <input type="radio" name="my-accordion-2" /> 
+              <div class="collapse-title text-xl font-medium">
+                <p>How can I tell if my helmet is old and I need a 
+                  new one?</p>
+              </div>
+              <div class="collapse-content"> 
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorum, odit. Eum, facilis ut soluta quos quae necessitatibus praesentium omnis sint ex eius veniam dolore adipisci qui tempore, corporis illum reiciendis.</p>
+              </div>
+            </div>
+            <div class="collapse collapse-arrow bg-base-200 mt-3">
+              <input type="radio" name="my-accordion-2" /> 
+              <div class="collapse-title text-xl font-medium">
+                <p>What rules should I follow when riding my bike?</p>
+              </div>
+              <div class="collapse-content"> 
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Minus ea alias delectus? Quasi repudiandae assumenda autem ex sapiente voluptatum tenetur cumque velit dicta doloremque odit minima at nobis aspernatur quos hic fugiat commodi officia, dignissimos excepturi eum harum voluptates exercitationem.</p>
+              </div>
+            </div>
+            <div class="collapse collapse-arrow bg-base-200 mt-3">
+              <input type="radio" name="my-accordion-2" /> 
+              <div class="collapse-title text-xl font-medium">
+                <p>Why our collection is the best in all over the world</p>
+              </div>
+              <div class="collapse-content"> 
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Minus ea alias delectus? Quasi repudiandae assumenda autem ex sapiente voluptatum tenetur cumque velit dicta doloremque odit minima at nobis aspernatur quos hic fugiat commodi officia, dignissimos excepturi eum harum voluptates exercitationem.</p>
+              </div>
+            </div>
+            <div class="collapse collapse-arrow bg-base-200 mt-3">
+              <input type="radio" name="my-accordion-2" /> 
+              <div class="collapse-title text-xl font-medium">
+                <p>Why you should buy our bike!</p>
+              </div>
+              <div class="collapse-content"> 
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Minus ea alias delectus? Quasi repudiandae assumenda autem ex sapiente voluptatum tenetur cumque velit dicta doloremque odit minima at nobis aspernatur quos hic fugiat commodi officia, dignissimos excepturi eum harum voluptates exercitationem.</p>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
     </main>
     <footer></footer>
   </body>
