Footer section added

--- a/index.html
+++ b/index.html
@@ -302,6 +302,44 @@
         </div>
       </section>
     </main>
-    <footer></footer>
+   
+      <section class="max-w-screen-xl mx-auto">
+        <footer class="footer p-10 bg-neutral text-neutral-content">
+          <div class="space-y-5">
+            <div>
+              <ul class="flex gap-5">
+                <li>Download Now</li>
+                <li>License</li>
+              </ul>
+            </div>
+            <div>
+              <ul class="flex gap-4">
+                <li>About</li>
+                <li>Features</li>
+                <li>Pricing</li>
+                <li>Careers</li>
+                <li>Help</li>
+                <li>Privacy Policy</li>
+              </ul>
+            </div>
+            <div>
+              <p>© Ishtiak Ahmed || Programming Hero <br> 2023 bike. All rights reserved</p>
+            </div>
+          </div> 
+          <div>
+            <span class="footer-title">Social</span> 
+            <div class="space-y-6">
+              <div>
+                <p>Get the App</p>
+              </div>
+              <div>
+                <div><img class="w-[100px]" src="./images/others/android.png" alt=""></div>
+                <div><img class="w-[100px]" src="./images/others/ios.png" alt=""></div>
+              </div>
+            </div>
+          </div>
+        </footer>
+      </section>
+    
   </body>
 </html>
